syntax = "proto3";	//verzija proto bafera

message MedicineAvailabilityMessage {
	string medicineName = 1;	// 1 = na prvom mestu se nalazi poruka
	int64 medicineQuantity = 2;	// 2 = na drugom mestu se nalazi random integer
}

message MedicineAvailabilityResponse{
	string response = 1;
	string status = 2;
}